updates for api playground

--- a/public/apitool/elements/ecosis-api-tool.html
+++ b/public/apitool/elements/ecosis-api-tool.html
@@ -10,6 +10,7 @@
       <ecosis-package-api panel root-package>
         <ecosis-package-query panel></ecosis-package-query>
         <ecosis-package-get panel></ecosis-package-get>
+        <ecosis-package-export panel></ecosis-package-export>
       </ecosis-package-api>
 
       <ecosis-spectra-api panel root-spectra>
