--- a/public/apitool/elements/package/ecosis-package-api.html
+++ b/public/apitool/elements/package/ecosis-package-api.html
@@ -29,7 +29,7 @@
           <a href="#package/get" class="horizontal center-center layout">Get</a>
         </paper-tab>
         <paper-tab link>
-          <a href="#package/get" class="horizontal center-center layout">Export</a>
+          <a href="#package/export" class="horizontal center-center layout">Export</a>
         </paper-tab>
       </paper-tabs>
 
