--- a/public/apitool/index.html
+++ b/public/apitool/index.html
@@ -11,18 +11,23 @@
   <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/bootswatch-dist/js/bootstrap.js"></script>
+  <script src="../bower_components/jquery-jsonview/dist/jquery.jsonview.js"></script>
   <!-- endbuild -->
 
   <!-- build:css css/api-build.css -->
   <link href="../bower_components/bootswatch-dist/css/bootstrap.css" rel="stylesheet" />
   <link href="../bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
   <link href="../bower_components/animate-css/animate.css" rel="stylesheet" />
+  <link href="../bower_components/jquery-jsonview/dist/jquery.jsonview.css" rel="stylesheet"  />
   <link href="css/style.css" rel="stylesheet" />
   <!-- endbuild -->
 
   <script type="text/javascript" src="/mqe/resources/mqe.js"></script>
 
   <link rel="import" href="elements.html">
+  <script>
+    var HOST = 'http://localhost:3003';
+  </script>
 
 </head>
 <body>
