--- a/public/apitool/elements.html
+++ b/public/apitool/elements.html
@@ -7,6 +7,7 @@
 <link rel="import" href="elements/package/ecosis-package-api.html" />
 <link rel="import" href="elements/package/ecosis-package-query.html" />
 <link rel="import" href="elements/package/ecosis-package-get.html" />
+<link rel="import" href="elements/package/ecosis-package-export.html" />
 <link rel="import" href="elements/spectra/ecosis-spectra-api.html" />
 <link rel="import" href="elements/spectra/ecosis-spectra-query.html" />
 <link rel="import" href="elements/ecosis-api-tool.html" />
