--- a/public/apitool/elements/package/ecosis-package-export.html
+++ b/public/apitool/elements/package/ecosis-package-export.html
@@ -1,4 +1,4 @@
-<dom-module id="ecosis-package-get">
+<dom-module id="ecosis-package-export">
   <style>
     :host {
       display: block;
@@ -6,9 +6,9 @@
   </style>
 
   <template>
-    <h4 class="page-header">/package/get</h4>
+    <h4 class="page-header">/package/export</h4>
     <div class="help-block">
-      You must provide either the package_id or the package_name.
+      Export package as CSV file.  You must provide either the package_id or the package_name.
     </div>
 
     <h5>Parameters</h5>
@@ -31,36 +31,57 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <label for="filtersInput" class="col-lg-2 control-label"></label>
+        <div class="col-lg-10">
+          <label>
+            <input type="checkbox" id="includeMetadata" on-change="onInputMetadata"> Include Metadata
+          </label>
+          <div class="help-block">Should the CSV file include the spectra metadata?</div>
+        </div>
+      </div>
+
     </div>
 
-    <h5>Preview</h5>
+    <h5>Export url</h5>
     <div id="preview"></div>
-
-    <ecosis-query-preview id="queryPreview"></ecosis-query-preview>
 
   </template>
 </dom-module>
 
 <script>
   Polymer({
-    is : 'ecosis-package-get',
+    is : 'ecosis-package-export',
 
     onInputId : function(e) {
       this.$.nameInput.value = '';
-      var id = e.currentTarget.value;
-      var url = HOST+'/package/get?id='+id;
+      var id = this.$.idInput.value;
+      var url = HOST+'/package/export?id='+id+this.includeMetadata();
 
       this.$.preview.innerHTML = '<a href="'+url+'" target="_blank">'+url+'</a>';
-      this.$.queryPreview.update(url);
     },
 
     onInputName : function(e) {
       this.$.idInput.value = '';
-      var id = e.currentTarget.value;
-      var url = HOST+'/package/get?package_name='+id;
+      var id = this.$.nameInput.value;
+      var url = HOST+'/package/export?package_name='+id+this.includeMetadata();
 
       this.$.preview.innerHTML = '<a href="'+url+'" target="_blank">'+url+'</a>';
-      this.$.queryPreview.update(url);
+    },
+
+    onInputMetadata : function() {
+      if( this.$.idInput.value ) {
+        this.onInputId();
+      } else if ( this.$.nameInput.value ) {
+        this.onInputName();
+      }
+    },
+
+    includeMetadata : function() {
+      if( $(this.$.includeMetadata).is(':checked') ) {
+        return '&includeMetadata=true';
+      }
+      return '';
     }
   });
 </script>
