adding filter lookup, bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <script type="text/javascript" src="js/customFilterPopup.js"></script>
   <!-- endbuild -->
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&sensor=true"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&sensor=true&libraries=geometry"></script>
 
 
   <script type="text/javascript">
@@ -61,6 +61,8 @@
 
 </head>
 <body>
+
+<filter-lookup></filter-lookup>
 
 <div id="home" style="display:none; padding:2% 6%">
   <div class="jumbotron" style="text-align:center">
