--- a/public/elements.html
+++ b/public/elements.html
@@ -3,3 +3,4 @@
 <link rel="import" href="elements/layout.html">
 <link rel="import" href="elements/esis-spectra-viewer.html">
 <link rel="import" href="elements/esis-data-downloader.html">
+<link rel="import" href="elements/filter-lookup.html">
