--- a/public/elements/filter-lookup.html
+++ b/public/elements/filter-lookup.html
@@ -17,14 +17,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h3><i class="fa fa-search"></i> Filter Lookup</h3>
+            <h3>Lookup Filter</h3>
           </div>
           <div class="modal-body">
             <h4 style="text-align:center;display:none" id="state">
-              <a class="btn btn-primary btn-lg" on-click="reset"><i class="fa fa-times"></i> <span id="stateLabel"></span></a> =
+              <a class="btn btn-primary btn-lg" on-click="back"><i class="fa fa-times"></i> <span id="stateLabel"></span></a> =
             </h4>
 
-            <input id="input" type="text" class="form-control" placeholder="Search Text" on-keyup="search"/>
+            <input id="input" type="text" class="form-control" placeholder="Search Filters" on-keyup="onKeyUp"/>
 
             <div class="results">
               <template is="dom-repeat" items="{{results}}">
@@ -49,6 +49,15 @@
         this.popup = $(this.$.popup).remove();
         $('body').append(this.popup);
         this.popup.modal({show: false});
+        this.searchTimer = -1;
+      },
+
+      onKeyUp : function() {
+        if( this.searchTimer != -1 ) clearTimeout(this.searchTimer);
+        this.searchTimer = setTimeout(function(){
+          this.searchTimer = -1;
+          this.search();
+        }.bind(this), 150);
       },
 
       search : function() {
@@ -61,6 +70,14 @@
             this.results = resp.values;
           }.bind(this));
         }
+      },
+
+      back : function() {
+        this.state = 'key';
+        this.$.input.value = this.key;
+        this.$.state.style.display = 'none';
+        this.$.input.focus();
+        this.search();
       },
 
       reset : function() {
