--- a/public/elements/esis-data-downloader.html
+++ b/public/elements/esis-data-downloader.html
@@ -109,7 +109,7 @@
             }
         }
 
-        this.$.linkUrl.setAttribute('href', '/package/download?package_id='+this.package+
+        this.$.linkUrl.setAttribute('href', '/package/export?package_id='+this.package+
             (f.length > 0 ? '&filters='+encodeURIComponent(JSON.stringify(f)) : '')+
             '&metadata='+($(this.$.metadata).is(':checked') ? 'true' : 'false'));
       }
