adding app metadata

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
 
   <title>EcoSIS - Spectral Library</title>
 
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <link rel="shortcut icon" href="assets/favicon.ico" />
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#63A442">
+
+  <meta name="description" content="EcoSIS, Ecological Spectral Information System, Spectral Library">
+  <meta name="keywords" content="EcoSIS, Ecological, Spectral, Library">
 
   <!-- build:js scripts/build.js -->
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
