--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
   <meta name="description" content="EcoSIS, Ecological Spectral Information System, Spectral Library">
   <meta name="keywords" content="EcoSIS, Ecological, Spectral, Library">
 
+  <link rel="icon" sizes="192x192" href="/assets/icon_192.png">
+  <link rel="icon" sizes="128x128" href="/assets/icon_128.png">
+  <link rel="apple-touch-icon" sizes="128x128" href="/assets/icon_128.png">
+  <link rel="apple-touch-icon-precomposed" sizes="128x128" href="/assets/icon_128.png">
+
   <!-- build:js scripts/build.js -->
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
