--- a/public/index.html
+++ b/public/index.html
@@ -23,48 +23,10 @@
   <link rel="apple-touch-icon" sizes="128x128" href="/assets/icon_128.png">
   <link rel="apple-touch-icon-precomposed" sizes="128x128" href="/assets/icon_128.png">
 
-  <!-- build:js scripts/build.js -->
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/bootswatch-dist/js/bootstrap.js"></script>
-  <script src="bower_components/leaflet/dist/leaflet.js"></script>
-  <script src="bower_components/handlebars/handlebars.js"></script>
-  <script src="bower_components/js-md5/js/md5.js"></script>
-  <script src="bower_components/bower-bootstrap-slider/js/bootstrap-slider.js"></script>
-  <script src="bower_components/letteringjs/jquery.lettering.js"></script>
-  <script src="bower_components/textillate/jquery.textillate.js"></script>
-
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/search.js"></script>
-  <script type="text/javascript" src="js/home.js"></script>
-  <script type="text/javascript" src="js/result.js"></script>
-  <script type="text/javascript" src="js/map.js"></script>
-  <script type="text/javascript" src="js/allFiltersPopup.js"></script>
-  <script type="text/javascript" src="js/customFilterPopup.js"></script>
-  <!-- endbuild -->
-
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&sensor=true&libraries=geometry"></script>
-
-
-  <script type="text/javascript">
-    $.get("/schema.json", function(resp) {
-      ESIS.schema = resp;
-    });
-  </script>
-
-  <!-- build:css css/build.css -->
-  <link href="bower_components/bootswatch-dist/css/bootstrap.css" rel="stylesheet" />
-  <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
-  <link href="bower_components/bower-bootstrap-slider/css/slider.css" rel="stylesheet" />
-  <link href="bower_components/animate-css/animate.css" rel="stylesheet" />
-  <link href="bower_components/leaflet/dist/leaflet.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet">
-  <!-- endbuild -->
-
-
+  <script src="js/webcomponents.js"></script>
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
   <script type="text/javascript" src="mqe/resources/mqe.js"></script>
-
-  <link rel="import" href="elements.html">
+  <link rel="import" href="require.html">
 
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="text/javascript">
@@ -74,6 +36,7 @@
         ESIS.home.chartReady();
       });
   </script>
+
   <style>
     .splash {
       background: url(../assets/banner.png) no-repeat center top;
@@ -193,7 +156,7 @@
 </div>
 
 <div id="result" style="display:none"></div>
-
+<div id="result-template-container" style="display:none"></div>
 
 <div id="compare" style="display:none">
   <div class="row">
@@ -336,5 +299,4 @@
 </script>
 <script src="/analytics"></script>
 
-</body>
-</html>
+</body></html>
