--- a/public/require.html
+++ b/public/require.html
@@ -27,4 +27,4 @@
 <link rel="import" href="elements/layout.html">
 <link rel="import" href="elements/esis-spectra-viewer.html">
 <link rel="import" href="elements/esis-data-downloader.html">
-<link rel="import" href="elements/filter-lookup.html">
+<link rel="import" href="elements/search-text-suggest.html">
