--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
 
 
   <div id="random" style="padding: 0 5%;">
-    <div id="random-title" style="font-size: 26px" class="tlt"></div>
+    <div id="random-title" style="font-size: 26px"></div>
 
-    <span id="random-common-name" class="tlt" style="font-size: 16px" ></span>
-    <span id="random-genus" class="tlt" style="font-size: 16px" ></span>
-    <span id="random-species" class="tlt" style="font-size: 16px" ></span>
+    <span id="random-common-name"  style="font-size: 16px" ></span>
+    <span id="random-genus" style="font-size: 16px" ></span>
+    <span id="random-species" style="font-size: 16px" ></span>
     <div id="random-chart" style="margin-top: 50px"></div>
   </div>
 
@@ -157,38 +157,6 @@
 <div id="result" style="display:none"></div>
 <div id="result-template-container" style="display:none"></div>
 
-<div id="compare" style="display:none">
-  <div class="row">
-    <div class="col-md-9">
-      <h2>Compare</h2>
-    </div>
-    <div class="col-md-3" style="height:40px;padding-top:10px;">
-      <a class='btn btn-primary pull-right' href="/#home" style="margin:5px"><i class="icon-home icon-white"></i> Home</a>
-      <a id="compare-back-btn" class="btn btn-primary pull-right" style="margin:5px"><i class="icon-search icon-white"></i> Back to Search</a>
-    </div>
-  </div>
-  <div id="compare-chart"></div>
-  <div id="compare-list-btns"></div>
-</div>
-
-<div id="group" style="display:none; padding:2% 6%">
-  <h2 id="group-header" class="page-header"></h2>
-  <div style="height: 40px">
-    <div class="pull-right">
-      <a class="btn btn-primary" id="group-back-search">Back to Search</a>
-      <a class="btn btn-primary" id="group-back-spectra">Back to Spectra</a>
-    </div>
-  </div>
-  <div id="group-chart"></div>
-  <div id="group-link" style="text-align:center;margin-bottom:15px"></div>
-  <div id="group-controls" style="text-align:center">
-    <a id="group-prev" class="btn btn-primary">Previous</a>
-    <select id="group-select" style="margin-bottom:0px;width:auto"></select>
-    <a id="group-next" class="btn btn-primary">Next</a>
-
-    <div id="group-loading">Loading...</div>
-  </div>
-</div>
 
 <div class="modal fade" id="all-filters-popup">
   <div class="modal-dialog">
