--- a/public/elements/esis-spectra-viewer.html
+++ b/public/elements/esis-spectra-viewer.html
@@ -329,7 +329,7 @@
       if( !this.spectraSlider ) return;
       this.$.currentSpectra.innerHTML = (this.selectedIndex+1);
       this.spectraSlider.slider('setValue',this.selectedIndex+1);
-      this.$.totalSpectraLabel.innerText = this.totalSpectra;
+      this.$.totalSpectraLabel.innerHTML = this.totalSpectra;
     },
 
     createTableArray : function(resetWavelengths) {
