--- a/public/require.html
+++ b/public/require.html
@@ -13,7 +13,6 @@
 
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/search.js"></script>
-<script type="text/javascript" src="js/home.js"></script>
 <script type="text/javascript" src="js/result.js"></script>
 <script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/allFiltersPopup.js"></script>
@@ -26,3 +25,4 @@
 <link rel="import" href="elements/esis-spectra-viewer.html">
 <link rel="import" href="elements/esis-data-downloader.html">
 <link rel="import" href="elements/search-text-suggest.html">
+<link rel="import" href="elements/ecosis-home-stats.html">
