--- a/public/elements/ecosis-home-stats.html
+++ b/public/elements/ecosis-home-stats.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div style="border-bottom:1px solid #eee"></div>
+    <div style="border-bottom:1px solid #eee;margin-bottom: 30px"></div>
 
     <div class="container">
       <h4>Recently Added</h4>
@@ -53,7 +53,7 @@
       onStatsLoad : function(stats) {
         this.stats = stats;
 
-        this.$.count.innerHTML = stats.spectraCount;
+        this.$.count.innerHTML = stats.spectraCount+' spectra and counting.';
 
         this.top.forEach(function(filter){
           this.createList(filter);
