webcomponents, schema.org markup and more

--- a/public/elements/home-stats.html
+++ b/public/elements/home-stats.html
@@ -1,4 +1,4 @@
-<dom-module id="ecosis-home-stats">
+<dom-module id="home-stats">
   <template>
     <style>
       :host {
@@ -42,7 +42,7 @@
   </template>
   <script>
     Polymer({
-      is: 'ecosis-home-stats',
+      is: 'home-stats',
 
       ready : function() {
         this.stats = {};
