--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
   <!--<div class="splash"></div>-->
   <img src="../assets/banner-slim.png" style="width:100%"/>
 
-  <ecosis-home-stats></ecosis-home-stats>
+  <home-stats></home-stats>
 
   <div style="margin-top:30px; text-align:center; border-top: 1px solid #eee; padding: 25px 5%">
     Data maintainers, <a id="mainainerLink" href="http://data.ecosis.org">Enter Here</a> |
@@ -140,8 +140,9 @@
 
 </div>
 
-<div id="result" style="display:none"></div>
-<div id="result-template-container" style="display:none"></div>
+<div id="result" style="display:none">
+  <results-panel></results-panel>
+</div>
 
 
 <div class="modal fade" id="all-filters-popup">
