--- a/public/require.html
+++ b/public/require.html
@@ -22,7 +22,6 @@
 <link rel="import" href="bower_components/polymer/polymer.html">
 
 <link rel="import" href="elements/layout.html">
-<link rel="import" href="elements/esis-spectra-viewer.html">
-<link rel="import" href="elements/esis-data-downloader.html">
-<link rel="import" href="elements/search-text-suggest.html">
-<link rel="import" href="elements/ecosis-home-stats.html">
+<link rel="import" href="elements/results/results-panel.html">
+<link rel="import" href="elements/widgets/search-text-suggest.html">
+<link rel="import" href="elements/home-stats.html">
